--- a/style.css
+++ b/style.css
@@ -18,7 +18,10 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #2ecc71;
+    position: relative;
 }
-canvas {
-    image-rendering: pixelated;
-}  
+
+canvas{
+    border: 1px solid red;
+    position: absolute;
+}
